--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,6 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bitmis?useSSL=fa
 spring.datasource.username=root
 spring.datasource.password=Jaggy@007
 
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
