--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9090
 
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bitmis?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Jaggy@007
+spring.datasource.password=Riya@5917
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
