--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ server.port=9090
 
 
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bitmis1?useSSL=false
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bitmis1?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Jaggy@007
+spring.datasource.password=root
 
 
 spring.jpa.hibernate.ddl-auto=update
