--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bitmis1?allowPub
 
 
 spring.datasource.username=root
-spring.datasource.password=Riya@5917
+spring.datasource.password=root
 
 
 
