--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bitmis1?allowPub
 
 
 spring.datasource.username=root
-spring.datasource.password=Sanket@123
+spring.datasource.password=root
+
 
 
 
