--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=9090
 
 
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bitmis1?allowPublicKeyRetrieval=true&useSSL=false
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/bitmis?allowPublicKeyRetrieval=true&useSSL=false
 
 
 spring.datasource.username=root
